# claude-scientific-writer

./: CHANGELOG.md  CLAUDE.md  README.md  example_api_usage.py  pyproject.toml
.claude/skills/research-lookup/scripts/: research_lookup.py
docs/: API.md  FEATURES.md
scientific_writer/: __init__.py  api.py  cli.py  core.py
skills/scientific-schematics/scripts/: generate_schematic.py
